fixed signin/firebase bugs, tidied up sign-in, removed 'cleared' attribute from task object

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -44,7 +44,7 @@
     <!-- The Modal -->
     <div id="loginFormModal" class="modal">
         <!-- Modal Content -->
-        <form class="modal-content animate" id="loginform">
+        <div class="modal-content animate" id="loginform">
             <!--<div class="imgcontainer">-->
             <!--<img src="img_avatar2.png" alt="Avatar" class="avatar">-->
             <!--</div>-->
@@ -65,7 +65,7 @@
                     <label for="psw">Password</label>
                 </div>
 
-                <button type="submit" id="loginbutton">Login</button>
+                <button  id="loginbutton">Login</button>
                 <!--<label>-->
                 <!--<input type="checkbox" checked="checked" name="remember"> Remember me-->
                 <!--</label>-->
@@ -78,12 +78,12 @@
                 <span class="psw" id="new-user"><a href="#">New user?</a></span>
             </div>
 
-        </form>
+        </div>
     </div>
 
     <div id="newUserModal" class="modal">
         <!-- Modal Content -->
-        <form class="modal-content animate" id="newUserForm">
+        <div class="modal-content animate" id="newUserForm">
 
             <div class="container" id="newUserformcontainer">
 
@@ -108,7 +108,7 @@
                     <label for="psw">Confirm Password</label>
                 </div>
 
-                <button type="submit" id="newUserbutton">Create User</button>
+                <button id="new-user-button">Create User</button>
             </div>
 
             <div class="container" style="background-color:#f1f1f1">
@@ -117,7 +117,7 @@
                 </button>
             </div>
 
-        </form>
+        </div>
     </div>
 
     <div id="signout-modal" class="modal">
